--- a/exercises/exercises.Rmd
+++ b/exercises/exercises.Rmd
@@ -914,8 +914,13 @@ grade_this({
     fail(glue::glue("Your query includes extra columns not expected: {toString(extra_cols_ex11)}."))
   }
   
-  # Check the correctness of the result
-  if (!all(.result_ex11$tailnum %in% .solution_ex11$tailnum) || !all(.result_ex11$model %in% .solution_ex11$model)) {
+  # Check row count matches
+  if (nrow(.result_ex11) != nrow(.solution_ex11)) {
+    fail("The number of rows returned by your query does not match the expected result. Ensure you're filtering for Boeing planes correctly.")
+  }
+  
+  # Check the correctness of the result (bidirectional)
+  if (!all(.result_ex11$tailnum %in% .solution_ex11$tailnum) || !all(.solution_ex11$tailnum %in% .result_ex11$tailnum)) {
     fail("The tail numbers and/or models returned by your query do not match the expected result. Ensure you're filtering for Boeing planes.")
   }
   
@@ -971,8 +976,13 @@ grade_this({
     fail(glue::glue("Your query includes extra columns not expected: {toString(extra_cols_ex12)}."))
   }
   
-  # Validate the correctness of the result
-  if (!all(.result_ex12$faa %in% .solution_ex12$faa)) {
+  # Check row count matches
+  if (nrow(.result_ex12) != nrow(.solution_ex12)) {
+    fail("The number of rows returned by your query does not match the expected result. Ensure your conditions are correct.")
+  }
+  
+  # Validate the correctness of the result (bidirectional check)
+  if (!all(.result_ex12$faa %in% .solution_ex12$faa) || !all(.solution_ex12$faa %in% .result_ex12$faa)) {
     fail("The FAA codes returned by your query do not match the expected result. Ensure your conditions are correct.")
   }
   
@@ -1026,8 +1036,13 @@ grade_this({
     fail(glue::glue("Your query includes extra columns not expected: {toString(extra_cols_ex13)}."))
   }
   
-  # Validate the correctness of the result
-  if (!all(.result_ex13$faa %in% .solution_ex13$faa)) {
+  # Check row count matches
+  if (nrow(.result_ex13) != nrow(.solution_ex13)) {
+    fail("The number of rows returned by your query does not match the expected result. Ensure your latitude range is correct.")
+  }
+  
+  # Validate the correctness of the result (bidirectional check)
+  if (!all(.result_ex13$faa %in% .solution_ex13$faa) || !all(.solution_ex13$faa %in% .result_ex13$faa)) {
     fail("The FAA codes returned by your query do not match the expected result. Ensure your latitude range is correct.")
   }
   
@@ -1150,7 +1165,7 @@ grade_this({
   }
   
   # Check if the result set matches the expected pattern
-  if (!all(grepl('^__ar', .result_ex15$tailnum))) {
+  if (!all(grepl('^..101', .result_ex15$tailnum))) {
     fail("The tail numbers returned by your query do not match the expected pattern.")
   }
   
@@ -1464,17 +1479,17 @@ WHERE dest = 'SEA';
 
 ```{r query21-check, echo=FALSE}
 grade_this({
-  .solution_query21 <- "SELECT MIN(dest) AS first_dest FROM flights WHERE dest = 'SEA';"
+  .solution_query21 <- "SELECT MIN(dest) AS first_sea_dest FROM flights WHERE dest = 'SEA';"
   .solution_ex21 <- DBI::dbGetQuery(con, .solution_query21)
   .result_ex21 <- DBI::dbGetQuery(con, .user_code)
   
-  # Check for the 'first_dest' column in the student's result
-  if (!"first_dest" %in% names(.result_ex21)) {
-    fail("Your query is missing the 'first_dest' column.")
+  # Check for the 'first_sea_dest' column in the student's result
+  if (!"first_sea_dest" %in% names(.result_ex21)) {
+    fail("Your query is missing the 'first_sea_dest' column.")
   }
   
   # Ensure the first destination alphabetically matches the solution
-  if (.result_ex21$first_dest != .solution_ex21$first_dest) {
+  if (.result_ex21$first_sea_dest != .solution_ex21$first_sea_dest) {
     fail("The first destination alphabetically returned by your query does not match the expected first destination.")
   }
   
@@ -1520,8 +1535,16 @@ grade_this({
     fail("Your query is missing the 'rounded_wind_gust' column.")
   }
   
+  # Check row count
+  if (nrow(.result_ex22) != nrow(.solution_ex22)) {
+    fail("The number of rows returned by your query does not match the expected result.")
+  }
+  
   # Ensure the rounded wind gust values match the solution
-  if (!all.equal(.result_ex22$rounded_wind_gust, .solution_ex22$rounded_wind_gust, check.attributes = FALSE)) {
+  # Note: all.equal returns TRUE if equal, or a character string describing differences (not FALSE)
+  # So we need to check if the result is exactly TRUE
+  comparison <- all.equal(.result_ex22$rounded_wind_gust, .solution_ex22$rounded_wind_gust, check.attributes = FALSE)
+  if (!isTRUE(comparison)) {
     fail("The rounded wind gust values returned by your query do not match the expected rounded values.")
   }
   
@@ -1708,10 +1731,8 @@ grade_this({
     fail("The number of rows returned by your query does not match the expected result.")
   }
 
-  # Enhanced order verification using data frame comparison for sorted columns
-  ordered_solution <- .solution_ex25[order(.solution_ex25$visib, .solution_ex25$wind_speed, decreasing = TRUE), ]
-  ordered_student_result <- .result_ex25[order(.result_ex25$visib, .result_ex25$wind_speed, decreasing = TRUE), ]
-  if (!identical(ordered_student_result$visib, ordered_solution$visib) || !identical(ordered_student_result$wind_speed, ordered_solution$wind_speed)) {
+  # Verify the order directly by comparing the columns as-is (not re-sorting)
+  if (!identical(.result_ex25$visib, .solution_ex25$visib) || !identical(.result_ex25$wind_speed, .solution_ex25$wind_speed)) {
     fail("The weather data in your query are not correctly ordered by descending visibility and wind speed.")
   }
   
@@ -1897,7 +1918,7 @@ FROM flights;
 
 ```{r query28-check, echo=FALSE}
 grade_this({
-  .solution_query28 <- "SELECT distance, CASE WHEN distance < 500 THEN 'Short' WHEN distance BETWEEN 500 AND 2000 THEN 'Medium' ELSE 'Long' END AS flight_distance_category FROM flights ORDER BY distance DESC;"
+  .solution_query28 <- "SELECT distance, CASE WHEN distance < 500 THEN 'Short' WHEN distance BETWEEN 500 AND 2000 THEN 'Medium' ELSE 'Long' END AS flight_distance_category FROM flights;"
   .solution_ex28 <- DBI::dbGetQuery(con, .solution_query28)
   .result_ex28 <- DBI::dbGetQuery(con, .user_code)
   
@@ -1914,17 +1935,21 @@ grade_this({
     fail(glue::glue("Your query includes extra columns not expected: {toString(extra_cols)}."))
   }
   
-  # Verify the correctness of flight distance categorization
-  if (!identical(.result_ex28$flight_distance_category, .solution_ex28$flight_distance_category)) {
-    fail("The flight distance categorization in your query does not match the expected categories.")
+  # Check row counts match
+  if (nrow(.result_ex28) != nrow(.solution_ex28)) {
+    fail("The number of rows returned by your query does not match the expected result.")
   }
   
-  # If order verification is required
-  if (!identical(.result_ex28$distance, .solution_ex28$distance)) {
-    fail("The order of distances in your query does not match the expected descending order.")
+  # Verify the correctness of flight distance categorization (order-independent)
+  # Sort both results by distance to compare categories correctly
+  .result_sorted <- .result_ex28[order(.result_ex28$distance), ]
+  .solution_sorted <- .solution_ex28[order(.solution_ex28$distance), ]
+  
+  if (!identical(.result_sorted$flight_distance_category, .solution_sorted$flight_distance_category)) {
+    fail("The flight distance categorization in your query does not match the expected categories.")
   }
 
-  pass("Your query correctly categorizes and orders flights by distance as 'Short', 'Medium', or 'Long'.")
+  pass("Your query correctly categorizes flights by distance as 'Short', 'Medium', or 'Long'.")
 })
 ```
 
@@ -1985,8 +2010,11 @@ grade_this({
   }
   
   # Check if the order of average speeds in the student's result is correct
-  sorted_avg_speed <- sort(.result_ex29$avg_speed, decreasing = TRUE)
-  if (!identical(.result_ex29$avg_speed, sorted_avg_speed)) {
+  # Use na.last = TRUE to handle NA values consistently
+  sorted_avg_speed <- sort(.result_ex29$avg_speed, decreasing = TRUE, na.last = TRUE)
+  result_avg_speed_with_na <- .result_ex29$avg_speed
+  result_avg_speed_with_na[is.na(result_avg_speed_with_na)] <- NA  # ensure consistent NA handling
+  if (!identical(result_avg_speed_with_na, sorted_avg_speed)) {
     fail("The average speeds in your query results are not correctly ordered in descending order.")
   }
   
